[package]
name = "hrx-get"
description = "Reader for Human Readable Archive (.hrx) data"
version = "0.2.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kaj/hrx-get"
readme = "README.md"
categories = ["filesystem"]
keywords = ["archive", "human", "reader", "readable", "data"]
edition = "2018"

[dependencies]
